@@ -11,3 +11,7 @@ javafx {
     version = "25.0.1"
     modules = listOf("javafx.controls")
 }
+
+tasks.withType<Test>().configureEach {
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
+}
